--- a/index.html
+++ b/index.html
@@ -12,16 +12,24 @@
       <h1>Tic Tac Toe</h1>
     </header>
     <main>
+      <div class="player-container">
+        <a href="#" class="btn player1">Player 1</a>
+        <a href="#" class="btn player2"> Player 2</a>
+      </div>
+      <p class="display">Let's play !</p>
       <div class="grid-container">
-        <div class="item box1"></div>
-        <div class="item box2"></div>
-        <div class="item box3"></div>
-        <div class="item box4"></div>
-        <div class="item box5"></div>
-        <div class="item box6"></div>
-        <div class="item box7"></div>
-        <div class="item box8"></div>
-        <div class="item box9"></div>
+        <div class="item box-1"></div>
+        <div class="item box-2"></div>
+        <div class="item box-3"></div>
+        <div class="item box-4"></div>
+        <div class="item box-5"></div>
+        <div class="item box-6"></div>
+        <div class="item box-7"></div>
+        <div class="item box-8"></div>
+        <div class="item box-9"></div>
+      </div>
+      <div style="text-align: center">
+        <a href="#" class=" btn restartbtn">Restart</a>
       </div>
     </main>
     <script src="index.js"></script>
