--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Tic Tac Toe</title>
+    <title>Tic Tac Toe !</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <h1>Tic Tac Toe</h1>
+      <h1>Tic Tac Toe !!</h1>
     </header>
     <main>
       <div class="player-container">
@@ -32,6 +32,6 @@
         <a href="#" class=" btn restartbtn">Restart</a>
       </div>
     </main>
-    <script src="index.js"></script>
+    <script type="module" src="./src/index.js"></script>
   </body>
 </html>
