added event listeners and started working on the logic

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </header>
     <main>
       <div class="player-container">
-        <a href="#" class="btn player1">Player 1</a>
-        <a href="#" class="btn player2"> Player 2</a>
+        <a href="#" class="btn player--1">Player 1</a>
+        <a href="#" class="btn player--2"> Player 2</a>
       </div>
       <p class="display">Let's play !</p>
       <div class="grid-container">
